# clawquant-trader

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  requirements.txt
clawquant/: clawquant_cli.py
clawquant/cli/: backtest_cli.py  data_cli.py  deploy_cli.py  radar_cli.py  report_cli.py  strategy_cli.py
clawquant/core/backtest/: batch.py  config.py  engine.py  events.py  execution.py  portfolio.py  result.py  risk.py  sweep.py  walkforward.py
clawquant/core/data/: alignment.py  cache.py  fetcher.py  inspector.py  models.py
clawquant/core/deploy/: manager.py  runner.py
clawquant/core/evaluate/: metrics.py  scorer.py
clawquant/core/radar/: explainer.py  scanner.py
clawquant/core/report/: charts.py  generator.py  json_report.py  markdown_report.py
clawquant/core/runtime/: base_strategy.py  loader.py  models.py  sandbox.py
clawquant/core/utils/: logging.py  output.py  run_id.py  state.py
clawquant/integrations/binance_skill_wrapper/: wrapper.py
clawquant/integrations/ccxt_fallback/: client.py
clawquant/skills/: SKILL.md  quant_backtest_batch.yaml  quant_backtest_sweep.yaml  quant_data_pull.yaml  quant_deploy.yaml  quant_radar_scan.yaml  quant_report_get.yaml
clawquant/strategies_builtin/: __init__.py  bollinger_bands.py  breakout.py  dca.py  grid.py  ma_crossover.py  macd.py  rsi_reversal.py
docs/: skill.md  人类使用指南.md
